# CppPracticum1

CLionProjects/pi-calc/: CMakeLists.txt
CLionProjects/pi-calc/src/: LongNumber.cpp  LongNumber.h  PiCalculator.cpp  main.cpp
CLionProjects/pi-calc/src/LongNumber/: LongNumber.cpp  LongNumber.h
CLionProjects/pi-calc/src/PiCalculator/: PiCalculator.cpp  PiCalculator.h
CLionProjects/pi-calc/tests/: tests.cpp
